# materialize-writer

./: Cargo.toml  Dockerfile  README.md  SCRATCH.md  docker-compose.yml  log4rs.yml
inspect/: Dockerfile
script/: setup.sh
src/: avro_encode.rs  main.rs
